--- a/config/ksql-server.properties
+++ b/config/ksql-server.properties
@@ -55,5 +55,12 @@ bootstrap.servers=localhost:9092
 # uncomment the below to start an embedded Connect worker
 # ksql.connect.worker.config=config/connect.properties
 
+ksql.server.errors=io.confluent.ksql.rest.TestErrorsImpl
 # Uncomment and complete the following to enable KSQL's integration to the Confluent Schema Registry:
 #ksql.schema.registry.url=?
+security.protocol=SASL_PLAINTEXT
+sasl.mechanism=PLAIN
+sasl.jaas.config=\
+    org.apache.kafka.common.security.plain.PlainLoginModule required \
+    username="ksql" \
+    password="ksql-secret";
