--- a/ksqldb-rest-app/pom.xml
+++ b/ksqldb-rest-app/pom.xml
@@ -166,6 +166,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.opencensus</groupId>
+            <artifactId>opencensus-proto</artifactId>
+            <version>0.2.0</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Only required to provide LoginModule implementation in tests -->
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
